--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-black
-flask
-psycopg2-binary
+alembic==1.8.1
+black==22.6.0
+click==8.1.3
+Flask==2.2.2
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.2
+MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+pathspec==0.10.0
+platformdirs==2.5.2
+psycopg2-binary==2.9.3
+SQLAlchemy==1.4.40
+tomli==2.0.1
+Werkzeug==2.2.2
